# wamr-runner-rs

./: Cargo.toml  LICENSE  build.rs
.vim/: coc-settings.json
doc/: 0001-Add-debug-information-for-wasm_set_exception.patch
src/: error.rs  main.rs  wamr.rs
src/wamr/: libiwasm.rs
test/: Makefile  test1.rs  test2.c
test/wasi-thread/: Makefile  pthread_test.c
