[package]
name = "wamr-runner-rs"
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
repository = "https://github.com/saimizi/wamr-runner-rs"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
error-stack = { version = "0.3.1", features = ["anyhow"] }
jlogger-tracing = "0.1.4"
libc = "0.2.147"

[build-dependencies]
jlogger-tracing = "0.1.4"
